--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -19,6 +19,7 @@
 
 \pagenumbering{roman}
 \tableofcontents
+\listoffigures
 \newpage
 
 
@@ -37,6 +38,12 @@
 \subfile{Week5/week5.tex}
 
 \subfile{Week6/week6.tex}
+
+\subfile{Week7/week7.tex}
+
+\subfile{Week8/week8.tex}
+
+\subfile{Week9/week9.tex}
 
 \printbibliography[heading=bibintoc]
 
