--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -35,6 +35,26 @@
 
 
 
+\subfile{PSet3/pset3.tex}
+\newpage
+
+
+
+\subfile{PSet4/pset4.tex}
+\newpage
+
+
+
+\subfile{PSet5/pset5.tex}
+\newpage
+
+
+
+\subfile{PSet6/pset6.tex}
+\newpage
+
+
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
