--- a/main.bib
+++ b/main.bib
@@ -1,6 +1,24 @@
 @unpublished{bib:DifferentialForms,
-    title = {Differential Forms},
-    author = {Victor Guillemin and Peter J. Haine},
-    year = {2018},
-    note = {\url{https://math.mit.edu/classes/18.952/2018SP/files/18.952_book.pdf}}
+    title     = {Differential Forms},
+    author    = {Victor Guillemin and Peter J. Haine},
+    year      = {2018},
+    note      = {\url{https://math.mit.edu/classes/18.952/2018SP/files/18.952_book.pdf}}
+}
+
+@book{bib:Rudin,
+    title     = {Principles of Mathematical Analysis},
+    author    = {Walter Rudin},
+    year      = {1976},
+    editor    = {A. Anthony Arthur and Shelly Levine Langman},
+    publisher = {McGraw-Hill},
+    edition   = {Third}
+}
+
+@unpublished{bib:KlugVectorCalc,
+    author    = {Michael Klug},
+    title     = {Connections with Vector Calculus},
+    date      = {2022},
+    month     = {April},
+    day       = {27},
+    urldate   = {2022-05-26}
 }
