--- a/preamble.tex
+++ b/preamble.tex
@@ -1,14 +1,17 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{csquotes}
 \usepackage{fancyhdr}
+\usepackage{xr}
 \usepackage{marginnote}
 \usepackage{scrextend}
 \usepackage[bottom]{footmisc}
 \usepackage[style=apa]{biblatex}
 \usepackage{enumitem}
+\usepackage{siunitx}
+\usepackage{subcaption,float}
 \usepackage{tikz}
 \usepackage{amsmath,amssymb,amsbsy,amsthm}
-\usepackage{bm,physics,mathtools}
+\usepackage{bm,physics,mathtools,nicematrix,empheq}
 \usepackage[hidelinks]{hyperref}
 
 \MakeOuterQuote{"}
@@ -24,6 +27,8 @@
     \renewcommand{\headrulewidth}{0pt}
 }
 
+\externaldocument{notes}
+
 \reversemarginpar
 
 \deffootnotemark{\textsuperscript{\textup{[}\thefootnotemark\textup{]}}}
@@ -33,6 +38,18 @@
 \DefineBibliographyStrings{english}{bibliography={References}}
 
 \setitemize[3]{label={\scriptsize$\blacksquare$}}
+\setitemize[4]{label={\tikz[scale=0.06,baseline={(0,-0.14)}]{
+    \draw [line width=0.3pt] (0,1) -- (1.2,0) -- (0,-1) -- (3.5,0) -- cycle;
+    \fill (1.2,0) -- (0,-1) -- (3.5,0);
+}}}
+
+\usetikzlibrary{intersections,3d,bending,calc,decorations.markings}
+\colorlet{brx}{brown}
+\colorlet{gax}{gray}
+\colorlet{rex}{red!80!black!90!orange!80}
+\colorlet{blx}{blue!90!green!80}
+\colorlet{orx}{orange!80!black!90!yellow!80}
+\colorlet{grx}{green!50!black!90!yellow!80}
 
 \DeclareMathOperator{\Hom}{Hom}
 \DeclareMathOperator{\eva}{ev}
@@ -45,9 +62,14 @@
 \DeclareMathOperator{\dvv}{div}
 \DeclareMathOperator{\grd}{grad}
 \DeclareMathOperator{\supp}{supp}
+\DeclareMathOperator{\intt}{int}
+\DeclareMathOperator{\Vol}{Vol}
+\DeclareMathOperator{\vol}{vol}
 
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\C}{\mathbb{C}}
 
 \newcommand{\lin}[2][]{\mathcal{L}^{#1}(#2)}
 \newcommand{\alt}[2][]{\mathcal{A}^{#1}(#2)}
@@ -57,6 +79,5 @@
 \newcommand{\ome}[2][]{\Omega^{#1}(#2)}
 
 \newcommand{\e}[1][]{\text{e}^{#1}}
-\renewcommand{\vec}[1]{#1}
 
 \usepackage{subfiles}
